# geda-tools

./: .gitignore  BaseFootprints.rb  Footprints.rb  GedaPCB.rb  IPC.rb  IPC7351.rb  SVG.rb  Settings.rb  autogen.sh  configure.ac  fpgen.rb
IPC7351/: BaseFootprints.rb  Drawable.rb  Environments.rb  Footprint.rb  Footprints.rb  GedaPCB.rb  Geometry.rb  Layer.rb  Pads.rb  Path.rb  Renderer.rb  SVG.rb  Settings.rb  Transformable.rb
build-tools/: .gitignore
chipgen/: chipgen.rb
fpgen/: IPC.rb  IPC7351.rb  fpgen.rb
fpgen/IPC7351/: BaseFootprints.rb  Boundable.rb  Cloneable.rb  Drawable.rb  Environments.rb  Footprint.rb  Footprints.rb  GedaPCB.rb  Geometry.rb  MinMax.rb  Pads.rb  Renderer.rb  Roundable.rb  SVG.rb  Shape.rb  Textfile.rb  Transformable.rb
fpgen2/: fpgen.rb  test-fpgen.rb
fpgen2/lib/: fpgen.rb
gschem2pcb/: .gitignore  gEDA.rb
gschem2pcb/cond/: Makefile  cond.racc  cond.rb  cond.rex
gschem2pcb/devmap/: devmap.rb
gschem2pcb/expr/: Makefile  expr.racc  expr.rb  expr.rex
gschem2pcb/pinmap/: pinmap.rb
gschem2pcb/renum/: renum.rb
libgedaruby/: .gitignore  configure.ac
libgedaruby/m4/: ax_ruby_devel.m4
libgedaruby/scripts/cond/: cond.rex
libgedaruby/scripts/expr/: expr.racc  expr.rex
libgedaruby/src/: .gitignore  Makefile.am  libgedaruby.h  ruby_geda.c  ruby_init.c  ruby_object.c  ruby_page.c  ruby_toplevel.c
libgedaruby/test/: Makefile.am  cond.bash  devmap.bash  test.rb  unittests.bash
libgedaruby/test/ref/: e3614a-2.DEVMAP.sch  e3614a-2.EMBED.sch  e3614a-2.PINMAP.sch
m4/: ax_ruby_devel.m4
make/: Makefile.template  gedaflow-defaults.mk  gedaflow.mk
mipmap/: devmap.scm  devmap.sh  pinmap.scm  varmap.scm
mipmap/mipmap/: file-utils.scm  gaf-utils.scm  getopt-utils.scm
mkgerber/: mkgerber.sh
scripts/cond/: cond.rb
scripts/devmap/: devmap.rb
scripts/expr/: expr.rb
scripts/pinmap/: pinmap.rb
src/: Makefile.am  geda-ruby.c  libgedaruby.h  ruby_object.c  ruby_page.c  ruby_toplevel.c
test/: .gitignore  Makefile.am  devmap.bash  devmap.rb  expr.bash  pinmap.bash  pinmap.rb  test.rb  varmap.bash  varmap.rb
test/ref/: e3614a-2.EXPR.sch  e3614a-2.VARMAP.sch
